<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ecls.as-15-8</groupId>
	<artifactId>as-15-8</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>Automated system 15.8</name>
	<description>Control of anonymizers, VPNs, search engines etc</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<modules>
		<module>as-15-8-messages</module>
		<module>as-15-8-rest</module>
		<module>as-15-8-modules</module>
	</modules>

	<distributionManagement>
		<!-- use the following if you're not using a snapshot version. -->
		<repository>
			<id>nexus</id>
			<name>RepositoryProxy</name>
			<url>http://192.168.1.146:8081/nexus/content/repositories/releases/</url>
		</repository>
		<!-- use the following if you ARE using a snapshot version. -->
		<snapshotRepository>
			<id>nexus</id>
			<name>RepositoryProxy</name>
			<url>http://192.168.1.146:8081/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>